syntax = "proto3";

package wandb_internal;

option java_package = "com.wandb.grpc";

import "google/protobuf/timestamp.proto";

/*
 * Record: joined record for message passing and persistance
 */
message Record {
  int64         num = 1;
  oneof data {
    HistoryData     history = 2;
    SummaryData     summary = 3;
    OutputData      output = 4;
    ConfigData      config = 5;
    FilesData       files = 6;
    StatsData       stats = 7;
    ArtifactData    artifact = 8;
    RunData         run = 17;
    ExitData        exit = 18;
    StatusData      status = 19;
  }
  Control       control = 16;
}

/*
 * Control: message passing metadata
 */
message Control {
  bool req_resp = 1;
  bool local = 2;  /* should not be persisted or synchronized */
}

/*
 * RunData: wandb/sdk/wandb_run/Run
 */
message RunData {
  string run_id = 1;
  string entity = 2;
  string project = 3;
  ConfigData config = 4;
  SummaryData summary = 5;
  string run_group = 6;
  string job_type = 7;
  string display_name = 8;
  string notes = 9;
  repeated string tags = 10;
  SettingsData settings = 11;
  string sweep_id = 12;
  string host = 13;

  string storage_id = 16;
  google.protobuf.Timestamp start_time = 17;
}

/*
 * SettingsData: wandb/sdk/wandb_settings/Settings
 */
message SettingsData {
  repeated SettingsItem item = 1;
}

message SettingsItem {
  string          key = 1;
  string          value_json = 16;
}

/*
 * HistoryData: wandb/sdk/wandb_history/History
 */
message HistoryData {
  repeated HistoryItem item = 1;
}

message HistoryItem {
  string          key = 1;
  repeated string nested_key = 2;
  string          value_json = 16;
}

/*
 * OutputData: console output
 */
message OutputData {
  enum OutputType {
    STDERR = 0;
    STDOUT = 1;
  }
  OutputType                output_type = 1;
  google.protobuf.Timestamp timestamp = 2;
  string                    line = 3;
}

/*
 * ConfigData: wandb/sdk/wandb_config/Config
 */
message ConfigData {
  repeated ConfigItem update = 1;
  repeated ConfigItem remove = 2;
}

message ConfigItem {
  string          key = 1;
  repeated string nested_key = 2;
  string          value_json = 16;
}

/*
 * SummaryData: wandb/sdk/wandb_summary/Summary
 */
message SummaryData {
  repeated SummaryItem update = 1;
  repeated SummaryItem remove = 2;
}

message SummaryItem {
  string          key = 1;
  repeated string nested_key = 2;
  string          value_json = 16;
}

/*
 * FilesData: files added to run
 */
message FilesData {
  repeated FilesItem files = 1;
}

message FilesItem {
  enum PolicyType {
    NOW = 0;
    END = 1;
    LIVE = 2;
  }
  string path = 1;
  PolicyType policy = 2;
  string external_path = 16;
}

/*
 * StatsData: system metrics
 */
message StatsData {
  enum StatsType {
    SYSTEM = 0;
  }
  StatsType                 stats_type = 1;
  google.protobuf.Timestamp timestamp = 2;
  repeated StatsItem        item = 3;
}

message StatsItem {
  string          key = 1;
  string          value_json = 16;
}

message ArtifactData {
  string                        run_id = 1;
  string                        project = 2;
  string                        entity = 3;
  string                        type = 4;
  string                        name = 5;
  string                        digest = 6;
  string                        description = 7;
  string                        metadata = 8;
  bool                          user_created = 9;
  bool                          use_after_commit = 10;
  repeated string               aliases = 11;
  ArtifactManifest              manifest = 12;
}

message ArtifactManifest {
  int32                             version = 1;
  string                            storage_policy = 2;
  repeated StoragePolicyConfigItem  storage_policy_config = 3;
  repeated ArtifactManifestEntry    contents = 4;
}

message ArtifactManifestEntry {
  string                path = 1;
  string                digest = 2;
  string                ref = 3;
  int64                 size = 4;
  string                mimetype = 5;
  string                local_path = 6;
  repeated ExtraItem    extra = 16;
}

message ExtraItem {
  string        key = 1;
  string        value_json = 2;
}

message StoragePolicyConfigItem {
  string            key = 1;
  string            value_json = 2;
}

/*
 * ExitData: exit status of process
 */
message ExitData {
  int32 exit_code = 1;
}


message StatusData {
}

/*
 * Result objects
 */
message RunUpdateResult {
  RunData run = 1;
}

message RunExitResult {
}

message LogResult {
}

message StatusResult {
}

message ResultRecord {
  oneof data {
    RunUpdateResult run_result = 17;
    RunExitResult   exit_result = 18;
    StatusResult    status_result = 19;
    LogResult       log_result = 20;
  }
}

service InternalService {
  rpc RunUpdate(RunData) returns (RunUpdateResult) {}
  rpc RunExit(ExitData) returns (RunExitResult) {}
  rpc Log(HistoryData) returns (LogResult) {}
  rpc ServerShutdown(ServerShutdownRequest) returns (ServerShutdownResult) {}
  rpc ServerStatus(ServerStatusRequest) returns (ServerStatusResult) {}
}

message ServerShutdownRequest {
}

message ServerShutdownResult {
}

message ServerStatusRequest {
}

message ServerStatusResult {
}